<resources>
    <string name="app_name">cricoscore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">Welcome at Cricoscore</string>
    <string name="singn_in_to_continue">Sign in to continue</string>
    <string name="signIn">Sign in</string>
    <string name="recover">Recover</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="have_an_account">You have an account?</string>
    <string name="singUp_continue">Sign up to continue</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="weneedemail">We need your registered e-mail address to send you a reset-password link.</string>
    <string name="weneedemobile">We need your registered mobile number to send you an OTP.</string>
    <string name="recover_to_password">Recover password to continue</string>
    <string name="login_through_otp">Login Through OTP</string>
    <string name="login_through_otp_to_continue">Request OTP to continue</string>
    <string name="request_otp">Request OTP</string>
    <string name="code_verification_msg">We have sent the code verification to</string>
    <string name="code_verification_msg_your">Your Mobile Number</string>
    <string name="code_verification_msg_your_email">Your Email Address</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification code</string>
    <string name="visit_profile">View Profile</string>
    <string name="username">Username</string>
    <string name="loading">Loading..</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="home">Home</string>
    <string name="addMatch">Add Match</string>
    <string name="ScheduleMatch">Schedule Match</string>
    <string name="addTournament">Add Tournament</string>
    <string name="ScheduleTournament">Schedule Tournament</string>
    <string name="search_hint">Search tournament and match</string>
    <string name="select_time">Select Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="organizer_contact_details">Organizer contact detail</string>
    <string name="add_team">Add Team</string>
    <string name="add_new_team">Add New Team</string>
    <string name="addPlayer">Add Player</string>
    <string name="teamlist">Team List</string>
    <string name="yourteamlist">Your Team List</string>
    <string name="select_player_list">Select Player From List</string>
    <string name="yourPlayerlist">Your Player List</string>
    <string name="playerlist">Team Player List</string>
    <string name="select_tournament_to_add_team">Select Tournament to add the selected team.</string>
    <string name="select_tournament_to_add_the_team">Select Tournament to add the team.</string>
    <string name="select_match_to_add__the_team">Select Match to add the team.</string>
    <string name="select_match_to_add_team">Select Match to add the selected team.</string>
    <string name="select_team_to_add_player">Select Team to add the selected player.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_team_from_list">Select team from list</string>
    <string name="select_player_from_list">Select Player From List</string>
    <string name="add_player">Add Player</string>
    <string name="player">Player</string>
    <string name="schedule_match">Schedule Matches</string>
    <string name="update_match">Update Schedule</string>
    <string name="next_toss">NEXT(TOSS)</string>
    <string name="schedule_match_list">Start List Of Matches</string>
    <string name="schedule_tournament">Schedule Tournament</string>
    <string name="schedule_tournament_list">Scheduled Matches of Tournament</string>
    <string name="schedule_match_details">Scheduled Matches Details</string>
    <string name="select_team_for_schedule">Firstly ! Select only two team to create a schedule!</string>
    <string name="select_the_final_playing_squad_for_both_teams">Select the final playing squad for both teams!</string>
    <string name="match_details">Match Details</string>
    <string name="tournament_details">Tournament Details</string>
    <string name="createMatch">Create Match</string>
    <string name="final_eleven">Playing XI</string>
    <string name="select_final_eleven">Select Playing XI</string>
    <string name="submit_final_details">Submit Final Details</string>
    <string name="live_scoring">Live Scoring</string>
    <string name="start_live_scoring">Start Live Scoring</string>
    <string name="change_scorer">Change Scorer</string>
    <string name="scorecard">Scorecard</string>
    <string name="cancel">Cancel</string>
    <string name="visit_details">View Details</string>
    <string name="toss">Toss</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="start_scoring">Start Scoring</string>
    <string name="select_player">Select Player</string>
    <string name="startSecondInning">Start Second Inning</string>
    <string name="endScoringSession">End Scoring Session</string>
    <string name="end_over">End Over</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="selection_of_team">Select toss winning team</string>
    <string name="selection_of_team_error">Choose toss winning team</string>
    <string name="Decision_to_choose">Decision to choose batting or bowling</string>
    <string name="username_msg">Sorry, your username must be between 3 to 21 characters</string>
    <string name="player_name">Sorry, your player name must be between 3 to 21 characters</string>
    <string name="team_name">Sorry, your team name  must be between 3 to 21 characters</string>
    <string name="city_namee">Sorry, your city name  must be between 3 to 21 characters</string>
    <string name="firstname_msg">Sorry, your firstname must be between 2 to 30 characters</string>
    <string name="lastname_msg">Sorry, your lastname must be between 2 to 30 characters</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Drinks">Drinks</string>
    <string name="timed_out">Timed Out</string>
    <string name="lunch">Lunch</string>
    <string name="stumps">Stumps</string>
    <string name="rain">Rain</string>
    <string name="others">Others</string>
    <string name="scoring_mistake">Scoring Mistake</string>
    <string name="wogen_wheel">Wagon Wheel</string>
    <string name="dont_show_ww_for_dots_ball">Don\'t show WW for dot balls</string>
    <string name="dont_show_ww_for_1s_2s_3s">Don\'t show WW for 1s,2s and 3s</string>
    <string name="short_area">Short Area</string>
    <string name="leg_glance">Leg Glance</string>
    <string name="inside_edge">Inside Edge</string>
    <string name="top_edge">Top Edge</string>
    <string name="pull">Pull</string>
    <string name="hook">Hook</string>
    <string name="dilscoop_ramp_shot">Dilscoop\n Ramp Shot</string>
    <string name="flick">Flick</string>
    <string name="punch">Punch</string>
    <string name="defence">Defence</string>
    <string name="sweep">Sweep</string>
    <string name="lofted_shot">Lofted Shot</string>
    <string name="slog_sweep">Slog Sweep</string>
    <string name="drive">Drive</string>
    <string name="helicopter">Helicopter</string>
    <string name="straight_drive">straight\n drive</string>
    <string name="on_drive">On Drive</string>
    <string name="off_drive">off drive</string>
    <string name="back_foot_punch">Back Foot Punch</string>
    <string name="inside_out">Inside Out</string>
    <string name="switch_hit">Switch Hit</string>
    <string name="late_cut">Late Cut</string>
    <string name="cut_shot">Cut Shot</string>
    <string name="square_drive">square drive</string>
    <string name="slash">slash</string>
    <string name="upper_cut">Upper Cut</string>
    <string name="reverse_sweep">reverse sweep</string>
    <string name="outside_edge">outside edge</string>
    <string name="reverse_scoop">reverse scoop</string>
    <string name="non_of_above">None Of the Above</string>
    <string name="savedmissing">*Saved/Missed runs and Dropped Catch are in Quick Options on the Scoring screen</string>
    <string name="live">Live</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="resume_scoring">Resume Scoring</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="view_full_scorecard">View Full Scorecard</string>
    <string name="batting_style">Batting Style</string>
    <string name="right_arm_fast">Right-arm fast</string>
    <string name="right_arm_midium">Right-arm medium</string>
    <string name="left_arm_fast">Left-arm fast</string>
    <string name="left_arm_midium">Left-arm medium</string>
    <string name="slow_left_arm_orthodox">Slow left-arm orthodox</string>
    <string name="slow_leftc_arm_chinaman">Slow left-arm chinaman</string>
    <string name="right_arm_off_break">Right-arm Off Break</string>
    <string name="right_arm_leg_break">Right-arm Leg Break</string>
    <string name="left_hand_bat">Left Hand Bat</string>
    <string name="right_hand_bat">Right Hand Bat</string>
    <string name="bowling_stayle">Bowling Style</string>
    <string name="commentary">Commentary</string>
    <string name="teams">Teams</string>
    <string name="full_commentary">Full Commentary</string>
    <string name="boundaries">Boundaries</string>
    <string name="wickets">Wickets</string>
    <string name="end_of_over">End of Over 2</string>
    <string name="gallery">Gallery</string>
    <string name="current_partnership">Current Partnership:</string>
    <string name="recents">Recents:</string>
    <string name="liveStreamYourLocalMatch">Live Stream Your Local Match</string>
    <string name="streamKey_msg">Sorry, your stream key must be between 3 to 21 characters</string>
    <string name="add_awards_message">Fill awards</string>
    <string name="tournamentName_msg">Tournament name should contain at lest 3 characters!</string>
    <string name="location_msg">Location should contain at lest 3 characters</string>
    <string name="groundName_msg">Ground Name should contain at lest 3 characters</string>
    <string name="tFess_msg">Enter Tournament Fees</string>
    <string name="numberOfTeams_msg">Enter Number Of Teams</string>
    <string name="organizerName_msg">Organizer Name should contain at lest 3 characters</string>
    <string name="phone_msg">Enter 10-digit mobile number</string>
    <string name="email_msg">Enter a valid email</string>
    <string name="my_tournament">My Tournament</string>
    <string name="city_name">City name can\'t be empty!</string>
    <string name="squad">Squad</string>
    <string name="matchType">Match Type</string>
    <string name="ballType">Ball Type</string>
</resources>