<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Live_Scoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/start_live_scoring"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@font/opensans_semibold" />

        <TextView
            android:id="@+id/tv_Change_Scorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/change_scorer"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@font/opensans_semibold" />

        <TextView
            android:id="@+id/tv_Score_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/scorecard"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@font/opensans_semibold" />

        <TextView
            android:id="@+id/tv_viewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/visit_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@font/opensans_semibold" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@font/opensans_semibold" />

    </LinearLayout>

</LinearLayout>