<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_nav"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:background="@color/purple_700"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/cover_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:background="@drawable/cover_bg"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/placeholder_user"
            app:civ_border_color="@color/white"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp" />

        <ImageView
            android:id="@+id/iv_verified"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/verified_user_chcek_dp"
            android:visibility="visible"
            tools:ignore="ImageContrastCheck" />
    </RelativeLayout>



    <TextView
        android:id="@+id/txt_nav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/rl_profile"
        app:layout_constraintBottom_toBottomOf="@+id/cover_img"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/txt_visit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/rl_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/visit_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
