<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:background="@color/purple_700">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:id="@+id/li_teamOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/placeholder_user" />
                <TextView
                    android:id="@+id/tvTName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Match Name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:fontFamily="@font/opensans_semibold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/opensans_bold"
                    android:backgroundTint="@color/smokewhite"
                    android:textColor="@color/black"
                    android:background="@drawable/circle_camera"
                    android:text="vs">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li_teamTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/im_teamTwo_logo"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/placeholder_user" />
                <TextView
                    android:id="@+id/tvTName_teamTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Match Name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:fontFamily="@font/opensans_semibold" />

            </LinearLayout>
        </LinearLayout>


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/li_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/editboxx"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/start_date"
                android:drawableLeft="@drawable/event_black_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/li_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editboxx"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/end_date"
                android:drawableLeft="@drawable/event_black_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/li_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/editboxx"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/start_time"
                android:drawableLeft="@drawable/event_black_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/li_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editboxx"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/end_time"
                android:drawableLeft="@drawable/event_black_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                />


        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_submit"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cornerRadius="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:fontFamily="@font/opensans_bold"
        android:textSize="@dimen/_10sdp"
        android:backgroundTint="@color/purple_500"
        />
</LinearLayout>